# vmwaretool

./: CONTRIBUTING.rst  Makefile  README.rst  requirements.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_vmwaretool.py
vmwaretool/: __init__.py  cli.py  exceptions.py  utils.py  vmware_ops.py  volumeops.py
