[metadata]
name = vmwaretool
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://vmwaretool.readthedocs.org
author = Walter A. Boring IV
author_email = something@somewhere.com
license = Apache
license_file = LICENSE
python_requires = >=3.6
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description_file =
    README.rst
project_urls =
    Source=https://github.com/hemna/vmwaretool
    Tracker=https://github.com/hemna/vmwaretool/issues
summary = vmware test tool

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    etc/vmwaretool =
       vmwaretool.conf.sample
packages =
    vmwaretool

[entry_points]
console_scripts =
    vmwaretool = vmwaretool.cli:main
oslo.config.opts =
    vmwaretool = vmwaretool.opts:list_opts
oslo.config.opts.defaults =
    vmwaretool = vmwaretool.opts:set_external_library_defaults

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build

[bdist_wheel]
universal = 1
